apps/api/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: remembot
  labels:
    name: remembot
