apps/api/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: remembot
spec:
  rules:
    - host: "api.remem.bot"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 3000
  tls:
  - hosts:
    - api.remem.bot
    secretName: api-cert
